[gd_scene load_steps=4 format=3 uid="uid://ccpgf411pm57y"]

[ext_resource type="FontFile" uid="uid://bh61ehiw3h71h" path="res://assets/Kenney Bold.ttf" id="1_3du23"]
[ext_resource type="Script" path="res://hud.gd" id="1_yigcs"]

[sub_resource type="LabelSettings" id="LabelSettings_mh3vt"]
font = ExtResource("1_3du23")
font_size = 48
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_yigcs")

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Coin Dash!"
label_settings = SubResource("LabelSettings_mh3vt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Score" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_mh3vt")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Time" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_mh3vt")
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -94.0
offset_right = 79.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_3du23")
theme_override_font_sizes/font_size = 30
text = "Start"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
